# agent-first-pay

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  spore.core.json
.github/workflows/: ci.yml  release.yml
container/: README.md
container/apple-container/: README.md  backup.sh  down.sh  logs.sh  restore.sh  up.sh
container/docker/: Dockerfile  backup.sh  compose.yaml  container-setup.sh  entrypoint.sh  restore.sh  supervisord.conf
container/docker/conf.d/: afpay-setup.conf  afpay.conf  phoenixd.conf
docker/: Dockerfile  docker-compose.yml  docker-setup.sh  entrypoint.sh
docker/conf.d/: afpay-setup.conf  afpay.conf  bitcoind.conf  phoenixd.conf
docs/: architecture.md  cli.md  manual.md  quickstart.md  testing.md
proto/: afpay.proto
scripts/: format.sh  test-hooks.sh  test.sh
src/: args.rs  cli.rs  config.rs  handler.rs  interactive.rs  lib.rs  main.rs  mcp.rs  output_fmt.rs  rest.rs  types.rs  writer.rs
src/handler/: helpers.rs  history.rs  limit.rs  mod.rs  pay.rs  wallet.rs
src/mode/: cli.rs  data.rs  interactive.rs  mod.rs  pipe.rs  rest.rs  session.rs  tui.rs
src/mode/rpc/: crypto.rs  mod.rs
src/provider/: cashu.rs  evm.rs  mod.rs  remote.rs  sol.rs
src/provider/btc/: common.rs  core_rpc.rs  electrum.rs  esplora.rs  mod.rs
src/provider/ln/: lnbits.rs  mod.rs  nwc.rs  phoenixd.rs
src/rpc/: crypto.rs  mod.rs
src/spend/: mod.rs  tokens.rs
src/store/: db.rs  lock.rs  mod.rs  postgres_store.rs  redb_store.rs  transaction.rs  wallet.rs
tests/: btc_live.rs  btc_receive_wait.rs  cashu_live.rs  evm_live.rs  evm_receive_wait.rs  history_sync.rs  ln_live.rs  lnbits_live.rs  rest_test.rs  rpc_test.rs  sol_live.rs  sol_receive_wait.rs
